--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "swiper": "^9.3.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
