--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "@uidotdev/usehooks": "^2.0.1",
     "formik": "^2.4.2",
     "phone": "^3.1.37",
     "react": "^18.2.0",
