--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "host": "vite --host"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@uidotdev/usehooks": "^2.0.1",
     "formik": "^2.4.2",
+    "next": "^13.4.9",
     "phone": "^3.1.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +43,6 @@
     "prettier": "^2.8.8",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "typescript": "^5.0.2"
   }
 }
