--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@uidotdev/usehooks": "^2.0.1",
     "formik": "^2.4.2",
+    "mongoose": "^7.5.1",
     "next": "^13.4.9",
     "phone": "^3.1.37",
     "react": "^18.2.0",
