--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/uuid": "^9.0.4",
     "@uidotdev/usehooks": "^2.0.1",
     "formik": "^2.4.2",
+    "mongoose": "^7.5.2",
     "next": "^13.4.9",
     "phone": "^3.1.37",
     "react": "^18.2.0",
