--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "@types/uuid": "^9.0.4",
     "@uidotdev/usehooks": "^2.0.1",
+    "eslint-config-next": "^13.5.4",
     "formik": "^2.4.2",
     "mongoose": "^7.5.2",
-    "next": "^13.4.9",
+    "next": "^13.5.4",
     "phone": "^3.1.37",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
