--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.5.4",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.4.2",
     "@types/react": "^18.0.28",
